--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- Light theme (default) - using amber/orange accents -->
+  <!-- Light theme (default) - using teal/orange accents -->
   <link id="light-theme" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link id="material-theme" href="https://cdn.jsdelivr.net/npm/@angular/material@15.2.9/prebuilt-themes/deeppurple-amber.css" rel="stylesheet">
-  <!-- Dark theme (disabled by default) - with cyan/blue tones -->
-  <link id="dark-theme" href="https://cdn.jsdelivr.net/npm/@angular/material@15.2.9/prebuilt-themes/pink-bluegrey.css" rel="stylesheet" disabled>
+  <link id="material-theme" href="https://cdn.jsdelivr.net/npm/@angular/material@15.2.9/prebuilt-themes/teal-amber.css" rel="stylesheet">
+  <!-- Dark theme (disabled by default) - with teal/blue tones -->
+  <link id="dark-theme" href="https://cdn.jsdelivr.net/npm/@angular/material@15.2.9/prebuilt-themes/teal-bluegrey.css" rel="stylesheet" disabled>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
